[package]
name = "proxycat"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "proxycat"
path = "src/main.rs"

[dependencies]
axum = "0.7"
tokio = { version = "1.36", features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "fs"] }
tray-icon = "0.20"
muda = "0.16"
image = "0.24"
windows = { version = "0.52", features = [
    "Win32_UI_WindowsAndMessaging",
    "Win32_Foundation",
    "Win32_UI_Controls",
    "Win32_NetworkManagement_InternetConnectionWizard",
    "Win32_Networking_WinInet",
    "Win32_System_Console"
]}
windows-sys = { version = "0.52", features = ["Win32_System_Console"]}
open = "3.2"
crossbeam-channel = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["default-tls"] }
log = "0.4"
env_logger = "0.11"
config = "0.13"
clap = { version = "4.5", features = ["derive"] } 